// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.perpetualtask.instancesync;

option java_multiple_files = true;

message AzureVmssInstanceSyncPerpetualTaskParams {
  string subscription_id = 1;
  string resource_group_name = 2;
  string vmss_id = 3;
  bytes azure_config = 4;
  bytes azure_encrypted_data = 5;
}
